Fix timeline story images; Cleanup index.html; Set visible variables

--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -259,24 +259,38 @@ header .header-content .header-content-inner p {
 }
 
 @media(max-width:768px) {
+    .navbar-default {
+        height: 0;
+    }
+    .navbar-default.affix {
+        height: 0;
+    }
     .navbar {
         background: transparent;
     }
     .navbar-collapse {
         border: none !important;
+        max-width: 200px;
+        float: right;
+        text-align: center;
+        justify-content: end !important;
     }
     .navbar-nav {
-        /*background: rgb(85 174 232 / 58%);*/
+        background: #CCC;
         float: right;
         color: #333;
         margin-right: 2px;
         border-radius: 8px;
     }
+
+    .nav .navbar-nav .navbar-right {
+        margin: 0 auto;
+    }
     .navbar-nav li a {
        color: #333 !important;
     }
     .navbar-toggle .icon-bar {
-        background-color: #FFF !important;
+        background-color: #282828 !important;
     }
     .navbar-default .navbar-toggle {
         border-color: transparent;
